2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el (uniquify-buffer-base-name): Undo last change.

2008-02-28  Daiki Ueno  <ueno@unixuser.org>

	* international/utf-7.el (utf-7-encode): Never skip the trailing - for
	the `imap' variant.

2008-02-27  Juanma Barranquero  <lekktu@gmail.com>

	* uniquify.el (uniquify-buffer-base-name): If the base name is an
	empty string, return nil to allow the caller to default to the
	buffer name.  Reported by Martin Fischer <parozusa@web.de>.

2008-02-26  Jason Rumney  <jasonr@gnu.org>

	* files.el (make-auto-save-file-name): Encode more characters in
	non-file buffer names.  Use url-encoding.

2008-02-26  Juanma Barranquero  <lekktu@gmail.com>

	* net/net-utils.el (ftp-program): Fix typo in docstring.
	(ifconfig-program-options, netstat-program-options)
	(arp-program-options, route-program-options, nslookup-program-options)
	(ftp-program-options, smbclient-program-options)
	(dns-lookup-program-options, arp, route): Doc fixes.

	* progmodes/gdb-ui.el (gdb-pc-address, gdb-source-file-list)
	(gdb-cpp-define-alist-program, gdb-mouse-jump, gdb-get-buffer-create)
	(gdb-set-gud-minor-mode-existing-buffers-1, gdb-debug-log):
	Fix typos in docstrings.
	(gdb-pending-triggers): Reflow docstring.
	(gdb, gdb-init-1): Fix typos in docstrings of gud-def definitions.

2008-02-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-neutralize-syntax-in-CPP): Fix a bug on
	typing "#" at EOB.

2008-02-25  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (shell-quote-wildcard-pattern): Quote ' and " as well.

2008-02-24  Jason Rumney  <jasonr@gnu.org>

	* files.el (file-name-invalid-regexp): Fix octal/decimal confusion.

2008-02-23  Ulrich Mueller  <ulm@gentoo.org>  (tiny change)

	* textmodes/bibtex.el (bibtex-convert-alien): Fix sit-for ags.

2008-02-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.el (dired-mark-prompt): Don't count/display the t element.